quorum/test/tests/TypeChecker/Pass/ImpAssignTextTextWrapped.quorum
class Main
    action Main
        text t = "t"
        output t
    end
end