quorum/test/tests/TypeChecker/Fail/ImpAssignNumObjTextWrapped.quorum
class main
    action main
        Number n = "text"
    end
end